--- a/db.yaml
+++ b/db.yaml
@@ -1,48 +1,28 @@
-- name: Configure DB Server
+- name: DB Server Configure
   hosts: db
   become: yes
   vars:
     login_host: db.daws24.online
-  vars_prompt:
-  - name: mysql_root_password
-    prompt: Please enter MySQL root password
-    private: no
   tasks:
   - name: Install MySQL Server
     ansible.builtin.dnf:
       name: mysql-server
-      state: latest  
-      
-  - name: Start and Enable MySQL server
+      state: latest
+  - name: Start and Enable MySQL Server
     ansible.builtin.service:
       name: mysqld
       state: started
       enabled: yes
-
-  - name: install python mysql dependencies
-    ansible.builtin.pip:
-      name: 
-      - PyMySQL
-      - cryptography
-      executable: pip3.9 # pip3.11 if python version is 3.11      
-    
-    # check password is already setup or not
-
-  - name: Check DB Connection
+  # check passwordis already setup or not
+  - name: checking db connection
     community.mysql.mysql_info:
-      local_user: root
-      local_password: "{{ mysql_root_password }}"
-      local_host: "{{ login_host }}"
+      login_user: root
+      login_password: ExpenseApp@1
+      login_host: "{{ login_host }}"
       filter: version
     ignore_errors: yes
     register: mysql_connection_output
 
   - name: print output
     ansible.builtin.debug:
-      msg: " output: {{mysql_connection_output}} "  
-
-  - name: setup root password
-    ansible.builtin.command:   mysql_secure_installation --set-root-pass "{{ mysql_root_password }}"
-    when: mysql_connection_output.failed is true # dont give True caps it wont work and in when condition dont provide this braces {{ }}
-
-
+      msg: "output: {{ mysql_connection_output }}"
