--- a/db.yaml
+++ b/db.yaml
@@ -3,6 +3,10 @@
   become: yes
   vars:
     login_host: db.daws24.online
+  vars_prompt:
+  - name: mysql_root_password
+    prompt: please enter MySQL root password
+    private: no
   tasks:
   - name: Install MySQL Server
     ansible.builtin.dnf:
@@ -13,11 +17,19 @@
       name: mysqld
       state: started
       enabled: yes
+
+  -name: install Python mysql dependencies
+    ansible.builtin.pip:
+      name:
+      - PyMySQL
+      - cryptography
+      executable: pip3.9  # pip3.11 used if python version is 3.11
+
   # check passwordis already setup or not
   - name: checking db connection
     community.mysql.mysql_info:
       login_user: root
-      login_password: ExpenseApp@1
+      login_password: mysql_root_password
       login_host: "{{ login_host }}"
       filter: version
     ignore_errors: yes
@@ -26,3 +38,7 @@
   - name: print output
     ansible.builtin.debug:
       msg: "output: {{ mysql_connection_output }}"
+  
+  - name: setup root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+    when: mysql_connection_output.failed is True
