--- a/backend.yaml
+++ b/backend.yaml
@@ -11,7 +11,7 @@
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
   - name: install nodejs
-    ansible.builtin.dnf: dnf install nodejs -y
+    ansible.builtin.dnf: 
       name: nodejs
       state: installed
 
