--- a/backend.yaml
+++ b/backend.yaml
@@ -34,3 +34,9 @@
       src: /tmp/backend.zip # by default ansible checks in ansible server
       dest: /app
       remote_src: yes
+
+  - name: install npm dependencies
+    ansible.builtin.command: npm install
+    args:
+      chdir: /app
+
