--- a/backend.yaml
+++ b/backend.yaml
@@ -14,8 +14,12 @@
 
   - name: install nodejs
     ansible.builtin.dnf: # only works for Redhat family
-      name: nodejs
+      name: "{{ item }}"
       state: installed
+
+    loop:
+    - mysql
+    - nodejs
 
   - name: create expense user
     ansible.builtin.user: 
