--- a/db.yaml
+++ b/db.yaml
@@ -41,4 +41,4 @@
   
   - name: setup root password
     ansible.builtin.command: "mysql_secure_installation --set-root-pass ExpenseApp@1"
-    when: mysql_connection_output.failed is true # don't give this braces {{ }} in when condition and also use small true for boolean 
+    when: mysql_connection_output.failed is True # don't give this braces {{ }} in when condition and also use small true for boolean 
