--- a/db.yaml
+++ b/db.yaml
@@ -3,10 +3,10 @@
   become: yes
   vars:
     login_host: db.daws24.online
-  # vars_prompt:
-  # - name: mysql_root_password
-  #   prompt: please enter MySQL root password
-  #   private: no
+  vars_prompt:
+  - name: mysql_root_password
+    prompt: please enter MySQL root password
+    private: no
   tasks:
   - name: Install MySQL Server
     ansible.builtin.dnf:
@@ -25,11 +25,11 @@
       - cryptography
       executable: pip3.9  # pip3.11 used if python version is 3.11
 
-  # check passwordis already setup or not
+  # check password is already setup or not
   - name: checking db connection
     community.mysql.mysql_info:
       login_user: root
-      login_password: "ExpenseApp@1"
+      login_password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
       filter: version
     ignore_errors: yes
@@ -40,5 +40,5 @@
       msg: "output: {{ mysql_connection_output }}"
   
   - name: setup root password
-    ansible.builtin.command: "mysql_secure_installation --set-root-pass ExpenseApp@1"
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
     when: mysql_connection_output.failed is true # don't give this braces {{ }} in when condition and also use small true for boolean 
