--- a/db.yaml
+++ b/db.yaml
@@ -12,11 +12,11 @@
     ansible.builtin.dnf:
       name: mysql-server
       state: latest
-  - name: Start and Enable MySQL Server
-    ansible.builtin.service:
-      name: mysqld
-      state: started
-      enabled: yes
+  # - name: Start and Enable MySQL Server
+  #   ansible.builtin.service:
+  #     name: mysqld
+  #     state: started
+  #     enabled: yes
 
   - name: install Python mysql dependencies
     ansible.builtin.pip:
@@ -24,6 +24,12 @@
       - PyMySQL
       - cryptography
       executable: pip3.9  # pip3.11 used if python version is 3.11
+
+  - name: Start and Enable MySQL Server
+    ansible.builtin.service:
+      name: mysqld
+      state: started
+      enabled: yes
 
   # check password is already setup or not
   - name: checking db connection
