--- a/backend.yaml
+++ b/backend.yaml
@@ -65,7 +65,7 @@
       target: /app/schema/backend.sql
       state: import
       name: all
-      ignore_error: yes
+      ignore_errors: yes
 
 
 
