--- a/backend.yaml
+++ b/backend.yaml
@@ -56,6 +56,8 @@
       - PyMySQL # to connect MySQL DB from ansible 
       - cryptography
       executable: pip3.9  # pip3.11 used if python version is 3.11
+  #ignore_errors: yes   
+
 
   - name: import data into mysql
     community.mysql.mysql_db:
@@ -65,7 +67,9 @@
       target: /app/schema/backend.sql
       state: import
       name: all
-    ignore_errors: yes
+  ignore_errors: yes 
+
+    
 
 
 
