--- a/backend.yaml
+++ b/backend.yaml
@@ -69,6 +69,10 @@
       name: all
   ignore_errors: yes 
 
+  - name: daemon reload
+    ansible-builtin.systemd_service:
+      daemon_reload: true
+
     
 
 
