--- a/backend.yaml
+++ b/backend.yaml
@@ -56,7 +56,7 @@
       - PyMySQL # to connect MySQL DB from ansible 
       - cryptography
       executable: pip3.9  # pip3.11 used if python version is 3.11
-  #ignore_errors: yes   
+  ignore_errors: yes   
 
 
   - name: import data into mysql
@@ -67,11 +67,17 @@
       target: /app/schema/backend.sql
       state: import
       name: all
-  ignore_errors: yes 
+  #ignore_errors: yes 
 
   - name: daemon reload
     ansible-builtin.systemd_service:
       daemon_reload: true
+
+  - name: start and enabled backend service
+    ansible.builtin.service:
+      name: backend
+      state: started
+      enabled: yes
 
     
 
