--- a/backend.yaml
+++ b/backend.yaml
@@ -67,10 +67,10 @@
       target: /app/schema/backend.sql
       state: import
       name: all
-  #ignore_errors: yes 
+    ignore_errors: yes 
 
   - name: daemon reload
-    ansible-builtin.systemd_service:
+    ansible.builtin.systemd_service:
       daemon_reload: true
 
   - name: start and enabled backend service
