--- a/backend.yaml
+++ b/backend.yaml
@@ -67,7 +67,7 @@
       target: /app/schema/backend.sql
       state: import
       name: all
-    ignore_errors: yes 
+    #ignore_errors: yes 
 
   - name: daemon reload
     ansible.builtin.systemd_service:
