--- a/frontend.yaml
+++ b/frontend.yaml
@@ -18,7 +18,7 @@
       path:  /usr/share/nginx/html
       state: absent  
 
-  - name: create html directory
-    ansible.builtin.file:
-      path: /usr/share/nginx/html
-      state: directory
+  # - name: create html directory
+  #   ansible.builtin.file:
+  #     path: /usr/share/nginx/html
+  #     state: directory
